Validacion de campos para form login

--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,7 @@
     <script>
         function mostrarModalCookies() {
             var modal = document.getElementById('modalCookies');
-            modal.style.display = 'block';
+            modal.style.display = 'flex';
         }
 
         function aceptarCookies() {
