--- a/login/templates/login_empleado.html
+++ b/login/templates/login_empleado.html
@@ -1,27 +1,61 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link type='text/css' rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'img/logonomigo.png' %}">
+    <script src="https://kit.fontawesome.com/381592b739.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h2>Login</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Login</button>
-    </form>
-    {% if form.errors %}
-        <div>
-            {% for field in form %}
-                {% for error in field.errors %}
-                    <p>{{ error }}</p>
-                {% endfor %}
-            {% endfor %}
-            {% for error in form.non_field_errors %}
-                <p>{{ error }}</p>
-            {% endfor %}
+    <section class="cont__login">
+        <div class="cont-login">
+            <div class="form-info">
+                <h1>El Poder De La Nomina</h1>
+                <p>Con NomiGo aprende la gestion de nomina de una manera realista y profesional con solo unos cuantos clicks</p>
+            </div>
+            <div class="form">
+                <h2>Iniciar Sesión</h2>
+                <form method="post">
+                    {% csrf_token %}
+                    <div>
+                        <label for="id_tipo_documento"><i class="fa fa-id-card"></i> Tipo Documento</label>
+                        {{ form.tipo_documento }}
+                    </div>
+                    <div>
+                        <label for="id_nro_documento"><i class="fa fa-user"></i> N° Documento</label>
+                        {{ form.nro_documento }}
+                    </div>
+                    <div>
+                        <label for="id_password"><i class="fa fa-lock"></i> Contraseña</label>
+                        {{ form.password }}
+                    </div>
+                    <div class="buttons">
+                        <button type="submit"><i class="fa fa-sign-in-alt"></i> Ingresar</button>
+                        <a class="redireccion" href="{% url 'register' %}"> ¿No tienes cuenta?</a>
+                    </div>
+                    
+                </form>
+            {% if form.errors %}
+                <div class="errores">
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                            <p>{{ error }}</p>
+                        {% endfor %}
+                    {% endfor %}
+                    {% for error in form.non_field_errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
+            
+            </div>
+            
         </div>
-    {% endif %}
-    <a href="{% url 'register' %}"> ¿No tienes cuenta?</a>
+    </section>
+
 </body>
 </html>
