--- a/nomigo/static/css/home.css
+++ b/nomigo/static/css/home.css
@@ -1,19 +1,19 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+
 .modal {
-    display: none;
     position: fixed;
     z-index: 9;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.79);
+    background-color: rgba(0, 0, 0, 0.81);
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
 }
 
 .modal-content {
@@ -21,27 +21,34 @@
     width: 100%;
     padding: 20px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
-
-.modal-content h2{
-    color:#f8d805 ;
+.modal-content h2 {
+    color: #f8d805;
     font-size: 2rem;
 }
-.modal-content p{
-    color:#e4e4e4 ;
+
+.modal-content p {
+    color: #e4e4e4;
     margin-top: 10px;
     margin-bottom: 10px;
 }
-.cookies-btn{
+
+.cookies-btn {
     height: 8vh;
+    width: 20%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
-.cookies-btn a{
-    color:#e4e4e4 ;
+
+.cookies-btn a {
+    color: #e4e4e4;
     border: #e4e4e4 2px solid;
     border-radius: 20px;
     display: inline-block;
@@ -50,13 +57,14 @@
     cursor: pointer;
     transition: background-color 0.5s ease, color 0.5s ease, transform 0.5s ease;
 }
-.cookies-btn a:hover{
+
+.cookies-btn a:hover {
     background-color: #e4e4e4;
     color: #2c245c;
     transform: scale(1.1);
-
 }
-.cont{
+
+.cont {
     width: 100%;
     height: 100vh;
     background-image: url('/static/img/foto1.png');
@@ -77,18 +85,20 @@
     justify-content: space-between;
     align-items: center;
 }
+
 .logo {
     display: grid;
     grid-template-columns: repeat(2, auto);
     grid-template-rows: 1fr 1fr;
     gap: 5px;
 }
+
 .color1 {
     background-color: #00dcbb;
 }
 
 .color2 {
-    background-color: #3acf2f; 
+    background-color: #3acf2f;
 }
 
 .color3 {
@@ -97,16 +107,17 @@
 }
 
 .color4 {
-    background-color:  #f8d805;
+    background-color: #f8d805;
 }
 
 .logo span {
-    display: inline-block; 
-    width: 15px;           
-    height: 15px;       
+    display: inline-block;
+    width: 15px;
+    height: 15px;
     border-radius: 50px;
 }
-.navegacion a{
+
+.navegacion a {
     color: rgb(197, 197, 197);
     font-family: Arial, Helvetica, sans-serif;
     margin: 10px;
@@ -114,29 +125,33 @@
     text-decoration: none;
     font-weight: 700;
 }
-.sub-cont{
+
+.sub-cont {
     width: 90%;
     height: 80vh;
     display: flex;
     flex-direction: column;
-    justify-content:center;
+    justify-content: center;
 }
-.sub-cont h1{
+
+.sub-cont h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
     font-size: 6rem;
     color: #f8d805;
 }
-.sub-cont p{
+
+.sub-cont p {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-size: 1.5rem;
     color: azure;
 }
 
-.enlaces{
+.enlaces {
     margin-top: 20px;
 }
+
 .enlaces a {
     display: inline-block;
     padding: 10px 20px;
@@ -148,7 +163,6 @@
     text-align: center;
     margin: 5px;
     transition: background-color 0.3s ease, color 0.3s ease;
-
 }
 
 .btn-filled {
@@ -161,17 +175,17 @@
 .btn-filled:hover {
     background-color: #2c245c;
     color: white;
-    border: 2px solid #2c245c; 
+    border: 2px solid #2c245c;
 }
 
 .btn-outline {
     background-color: transparent;
-    color: #e4e4e4; 
+    color: #e4e4e4;
     border: 2px solid #e4e4e4;
 }
 
 .btn-outline:hover {
     background-color: #2c245c;
     border: 2px solid #2c245c;
-    color: white; 
+    color: white;
 }
