--- a/login/static/css/register.css
+++ b/login/static/css/register.css
@@ -6,7 +6,7 @@
 .cont__login{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to bottom left, #a144cf, #6541b3, #552ea8, #461b9d, #370993, #2b0078);
+    background: linear-gradient(to bottom right, #a144cf, #6541b3, #552ea8, #461b9d, #370993, #2b0078);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,7 +14,7 @@
 
 }
 .cont-login {
-    width: 70%;
+    width: 80%;
     height: 80vh;
     background-color: aliceblue;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
@@ -23,7 +23,7 @@
 }
 
 .form-info{
-    width: 45%;
+    width: 40%;
     background-color: #2c245c;
     background-image: url('/static/img/gp001.png');
     background-size: cover;
@@ -32,14 +32,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    text-align: left;
+    text-align: start;
     padding: 50px;
 }
 .form-info h1{
     font-size: 3rem;
     color: #f8d805;
-    line-height: 0.8;
 }
 .form-info p{
     margin-top: 10px;
@@ -48,7 +46,7 @@
 
 .form{
     background-color: rgb(231, 231, 231);
-    width: 55%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -56,27 +54,30 @@
 }
 
 form {
+    display: flex;
+    flex-wrap: wrap;
     padding: 20px;
     width: 90%;
 }
 
-.form h2 {
-    font-size: 3rem;
-    color: #2c245c;
-    width: 80%;
+.column {
+    width: 50%;
+    padding: 10px;
+    box-sizing: border-box;
 }
-
 label {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     font-weight: bold;
     color: #7c7c7c;
 }
 
 input[type="text"],
 input[type="password"],
+#id_correo, #id_fecha_expedicion,
 select {
-    width: 100%;
+    width: 80%;
+    height: 4vh;
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
@@ -84,6 +85,7 @@ select {
     box-sizing: border-box;
     font-size: 14px;
 }
+
 
 button[type="submit"] {
     background-color: #2c245c;
@@ -110,6 +112,7 @@ button[type="submit"]:hover {
     margin-left: -10px;
 }
 .buttons{
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
