--- a/gestion_empleados/templates/home_empleados.html
+++ b/gestion_empleados/templates/home_empleados.html
@@ -1,57 +1,85 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Registro de Empleado</title>
+    <link type='text/css' rel="stylesheet" href="{% static 'css/home_empleados.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'img/logonomigo.png' %}">
+    <script src="https://kit.fontawesome.com/381592b739.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <nav class="navbar">
-        <div class="left">
-            <a href="#">Mi cuenta</a>
-            <a href="#">Configuracion</a>
 
-            <!-- Opciones para el rol de GESTOR -->
-            {% if registros.rol == 'GESTOR' %}
-                <a href="#">Administrar Usuarios</a>
-                <a href="#">Mis empresas</a>
-            {% endif %}
-
-            {% if registros.rol == 'OPERADOR' %}
-                <a href="#">Administrar Usuarios</a>
-                <a href="#">Reportes</a>
-                <a href="#">Gestion de Novedades</a>
-                <a href="{% url 'horas' %}">Horas extra</a>
-            {% endif %}
-
-            {% if registros.rol == 'LECTOR' %}
-            {% comment %} <a href="{% url 'vista_para_accion' 'nro_doc'%}">Calcular Seguridad social</a> {% endcomment %}
-            {% comment %} Ese es el ejemplo de que deben pasar a la vista, el nro_doc lo sacan de las cookies de sesion, ahi queda guardado al logearse {% endcomment %}
-
-                <a href="{% url 'calcula' request.session.empleado_nro_documento %}">Consultar Horas extra</a>
-
-                <a href="#">Calcular Seguridad social</a>
-                <a href="#">Obtener ARL</a>
-                <a href="#">Calcular prima</a>
-
-                {% comment %} Asi con todas las demás opciones que se necesiten realizar{% endcomment %}
-            {% endif %}
-        </div>
-        <div class="right">
-            <button class="profile-button">Perfil</button>
-            <div class="profile-dropdown">
-                <a href="#">Cerrar sesión</a>
-                <a href="#">Información de la cuenta</a>
+        <div class="logo-menu">
+            <div class="logo">
+                <span class="color1 figura"></span>
+                <span class="color2 figura"></span>
+                <span class="color3 figura"></span>
+                <span class="color4 figura"></span>
             </div>
+            <h3>NomiGo</h3>
+        </div>
+
+        <div class="opciones">
+
+        <!-- Opciones para el rol de GESTOR -->
+            {% if registros.rol == 'GESTOR' %}
+            <a href="#"><i class="fas fa-users-cog"></i> Administrar Usuarios</a>
+            <a href="#"><i class="fas fa-user-tie"></i> Administrar Empleados</a>
+            <a href="#"><i class="fas fa-building"></i> Mis empresas</a>
+            <a href="#"><i class="fas fa-building"></i> Mis empresas</a>
+            {% endif %}
+
+        <!-- Opciones para el rol de OPERADOR -->
+            {% if registros.rol == 'OPERADOR' %}
+            <a href="#"><i class="fas fa-user-tie"></i> Administrar empleados</a>
+            <a href="#"><i class="fas fa-chart-line"></i> Reportes</a>
+            <a href="#"><i class="fas fa-tasks"></i> Gestion de Novedades</a>
+            <a href="{% url 'horas' %}"><i class="fas fa-clock"></i> Horas extra</a>
+        {% endif %}
+
+        <!-- Opciones para el rol de LECTOR -->
+        {% if registros.rol == 'LECTOR' %}
+        {% comment %} <a href="{% url 'vista_para_accion' 'nro_doc'%}">Calcular Seguridad social</a> {% endcomment %}
+        {% comment %} Ese es el ejemplo de que deben pasar a la vista, el nro_doc lo sacan de las cookies de sesion, ahi queda guardado al logearse {% endcomment %}
+
+        <a href="{% url 'calcula' request.session.empleado_nro_documento %}"><i class="fas fa-clock"></i> Consultar Horas extra</a>
+        <a href="#"><i class="fas fa-calculator"></i> Calcular Seguridad social</a>
+        <a href="#"><i class="fas fa-shield-alt"></i> Obtener ARL</a>
+        <a href="#"><i class="fas fa-hand-holding-usd"></i> Calcular prima</a>
+
+        {% comment %} Asi con todas las demás opciones que se necesiten realizar{% endcomment %}
+        {% endif %}
+        </div>
+
+        <div class="opciones opciones-cuenta">
+
+            <div class="info-cuenta">
+                <img src="{% static 'img/logonomigo.png' %}" alt="">
+                <div>
+                    <h4>{{ registros.nombre1 }} {{ registros.nombre2 }}</h1>
+                        <p>ID: {{ registros.nro_documento}}</p>
+                </div>
+
+            </div>
+
+            <a href="#"><i class="fas fa-cog"></i> Configuración</a>
+            <a href="#"><i class="fas fa-question-circle"></i> Ayuda</a>
+            <a href="#"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
         </div>
     </nav>
 
-<main>
     <div class="content">
-        <h1>Bienvenido {{ registros.nombre1 }} {{ registros.nombre2 }}</h1>
+        <div class="class">
 
+        </div>
     </div>
-</main>
 
 </body>
 </html>
