agregue lo de prima, me habia faltado

--- a/gestion_empleados/templates/home_empleados.html
+++ b/gestion_empleados/templates/home_empleados.html
@@ -48,7 +48,7 @@
     <a href="{% url 'calcula' request.session.empleado_nro_documento %}"><i class="fas fa-clock"></i> Consultar Horas extra</a>
     <a href="{% url 'calcular_seguridad_social' registros.nro_documento %}"><i class="fas fa-calculator"></i> Calcular Seguridad social</a>
     <a href="#"><i class="fas fa-shield-alt"></i> Obtener ARL</a>
-    <a href="#"><i class="fas fa-hand-holding-usd"></i> Calcular prima</a>
+    <a href="{% url 'registrar_prima' registros.nro_documento %}"><i class="fas fa-hand-holding-usd"></i> Calcular prima</a>
     {% endif %}
     </div>
 
@@ -70,8 +70,4 @@
 <div class="content">
     <div class="class">
 
-    </div>
-</div>
-
-</body>
-</html>
+   
