--- a/gestion_empleados/templates/home_empleados.html
+++ b/gestion_empleados/templates/home_empleados.html
@@ -49,7 +49,7 @@
         {% comment %} <a href="{% url 'vista_para_accion' 'nro_doc'%}">Calcular Seguridad social</a> {% endcomment %}
         {% comment %} Ese es el ejemplo de que deben pasar a la vista, el nro_doc lo sacan de las cookies de sesion, ahi queda guardado al logearse {% endcomment %}
 
-        <a href="{% url 'calcula' request.session.empleado_nro_documento %}"><i class="fas fa-clock"></i> Consultar Horas extra</a>
+        <a href="{% url 'horasLector' request.session.empleado_nro_documento %}"><i class="fas fa-clock"></i> Consultar Horas extra</a>
         <a href="#"><i class="fas fa-calculator"></i> Calcular Seguridad social</a>
         <a href="#"><i class="fas fa-shield-alt"></i> Obtener ARL</a>
         <a href="#"><i class="fas fa-hand-holding-usd"></i> Calcular prima</a>
@@ -71,7 +71,7 @@
 
             <a href="#"><i class="fas fa-cog"></i> Configuración</a>
             <a href="#"><i class="fas fa-question-circle"></i> Ayuda</a>
-            <a href="#"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
+            <a href="{% url 'login' %}"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
         </div>
     </nav>
 
