--- a/gestion_empleados/templates/home_empleados.html
+++ b/gestion_empleados/templates/home_empleados.html
@@ -29,15 +29,14 @@
         <div class="opciones">
 
             <!-- Opciones para el rol de GESTOR -->
-                {% if registros.rol == 'GESTOR' %}
+            {% if rol == 'GESTOR' %}
                 <a href="#"><i class="fas fa-users-cog"></i> Administrar Usuarios</a>
                 <a href="#"><i class="fas fa-user-tie"></i> Administrar Empleados</a>
                 <a href="#"><i class="fas fa-building"></i> Mis empresas</a>
-                <a href="#"><i class="fas fa-building"></i> Mis empresas</a>
-                {% endif %}
+            {% endif %}
         
             <!-- Opciones para el rol de OPERADOR -->
-                {% if registros.rol == 'OPERADOR' %}
+            {% if rol == 'OPERADOR' %}
                 <a href="#"><i class="fas fa-user-tie"></i> Administrar empleados</a>
                 <a href="#"><i class="fas fa-chart-line"></i> Reportes</a>
                 <a href="#"><i class="fas fa-tasks"></i> Gestion de Novedades</a>
@@ -45,41 +44,35 @@
             {% endif %}
         
             <!-- Opciones para el rol de LECTOR -->
-            {% if registros.rol == 'LECTOR' %}
-            <a href="{% url 'horasLector' request.session.empleado_nro_documento %}"><i class="fas fa-clock"></i> Consultar Horas extra</a>
-            <a href="{% url 'calcular_seguridad_social' registros.nro_documento %}"><i class="fas fa-calculator"></i> Calcular Seguridad social</a>
-            <a href="{% url 'calcular_arl' registros.nro_documento %}"><i class="fas fa-shield-alt"></i> Obtener ARL</a>
-            <a href="{% url 'registrar_prima' registros.nro_documento %}"><i class="fas fa-hand-holding-usd"></i> Calcular prima</a>
+            {% if rol == 'LECTOR' %}
+                <a href="{% url 'horasLector' request.session.empleado_nro_documento %}"><i class="fas fa-clock"></i> Consultar Horas extra</a>
+                <a href="{% url 'calcular_seguridad_social' empleado_nro_documento %}"><i class="fas fa-calculator"></i> Calcular Seguridad social</a>
+                <a href="{% url 'calcular_arl' empleado_nro_documento %}"><i class="fas fa-shield-alt"></i> Obtener ARL</a>
+                <a href="{% url 'registrar_prima' empleado_nro_documento %}"><i class="fas fa-hand-holding-usd"></i> Calcular prima</a>
             {% endif %}
-            </div>
         
-            <div class="opciones opciones-cuenta">
-                <div class="info-cuenta">
-                    <img src="{% static 'img/logonomigo.png' %}" alt="">
-                    <div>
-                        <h4>{{ registros.nombre1 }} {{ registros.nombre2 }}</h4>
-                        <p>ID: {{ registros.nro_documento }}</p>
-                    </div>
+        </div>
+
+        <div class="opciones opciones-cuenta">
+            <div class="info-cuenta">
+                <img src="{% static 'img/logonomigo.png' %}" alt="">
+                <div>
+                    <h4>{{ nombre1 }} {{ nombre2 }}</h4>
+                    <p>ID: {{ nro_documento }}</p>
                 </div>
-        
-                <a href="#"><i class="fas fa-cog"></i> Configuración</a>
-                <a href="#"><i class="fas fa-question-circle"></i> Ayuda</a>
-                <a href="#"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
             </div>
 
+            <a href="#"><i class="fas fa-cog"></i> Configuración</a>
+            <a href="#"><i class="fas fa-question-circle"></i> Ayuda</a>
+            <a href="#"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
         </div>
+
     </nav>
 
     <div class="content">
         <div class="class">
-
+            <!-- Contenido adicional -->
         </div>
     </div>
-
-    
-</nav>
-
-<div class="content">
-    <div class="class">
-
-   
+</body>
+</html>
