redirecciones corregidas en el home empleados

--- a/gestion_empleados/templates/home_empleados.html
+++ b/gestion_empleados/templates/home_empleados.html
@@ -46,9 +46,9 @@
             <!-- Opciones para el rol de LECTOR -->
             {% if rol == 'LECTOR' %}
                 <a href="{% url 'horasLector' request.session.empleado_nro_documento %}"><i class="fas fa-clock"></i> Consultar Horas extra</a>
-                <a href="{% url 'calcular_seguridad_social' empleado_nro_documento %}"><i class="fas fa-calculator"></i> Calcular Seguridad social</a>
-                <a href="{% url 'calcular_arl' empleado_nro_documento %}"><i class="fas fa-shield-alt"></i> Obtener ARL</a>
-                <a href="{% url 'registrar_prima' empleado_nro_documento %}"><i class="fas fa-hand-holding-usd"></i> Calcular prima</a>
+                <a href="{% url 'calcular_seguridad_social' request.session.empleado_nro_documento %}"><i class="fas fa-calculator"></i> Calcular Seguridad social</a>
+                <a href="{% url 'calcular_arl' request.session.empleado_nro_documento %}"><i class="fas fa-shield-alt"></i> Obtener ARL</a>
+                <a href="{% url 'registrar_prima' request.session.empleado_nro_documento %}"><i class="fas fa-hand-holding-usd"></i> Calcular prima</a>
             {% endif %}
         
         </div>
